--- a/src/app/modal/modal-create-member/modal-create-member.component.scss
+++ b/src/app/modal/modal-create-member/modal-create-member.component.scss
@@ -36,8 +36,8 @@
     overflow: hidden;
 }
 
-.overflow-team {
-    overflow-y: scroll;
-    overflow-x: hidden;
-    height: 300px;
-}
+// .overflow-team {
+//     overflow-y: scroll;
+//     overflow-x: hidden;
+//     height: 300px;
+// }
