--- a/src/app/modal/modal-address/modal-address.component.html
+++ b/src/app/modal/modal-address/modal-address.component.html
@@ -15,7 +15,7 @@
 <div class="row mt-3">
   <div class="col-12 col-md-6">
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="กรุณากรอกเบอร์โทร" [(ngModel)]="data.tel">
+      <input matInput type="tel" maxlength="10"  placeholder="กรุณากรอกเบอร์โทร" [(ngModel)]="data.tel">
     </mat-form-field>
   </div>
   <div class="col-12 col-md-6 d-none d-md-block"></div>
