--- a/src/app/modal/modal-address/modal-address.component.scss
+++ b/src/app/modal/modal-address/modal-address.component.scss
@@ -15,3 +15,16 @@
 .curser-pointer {
     cursor: pointer;
 }
+
+.a {
+    width: 100%;
+    text-align: center ;
+    border-bottom: 1px dashed #000 !important;
+    line-height: 0.1em !important;
+    margin: 10px 0 20px !important;
+}
+
+.b {
+    background: #fff;
+    padding: 0 10px !important;
+}
