--- a/src/app/pages/admin-manage-team/admin-manage-team.component.scss
+++ b/src/app/pages/admin-manage-team/admin-manage-team.component.scss
@@ -4,6 +4,10 @@
 
 .div-list-style {
     height: 300px;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
+}
+
+.border-btn {
+    border-color: #ff4081;
 }
