--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -14,9 +14,11 @@
     <div class="row">
       <div class="col-12">
         <span class="font-address">
-          <p class="ml-2 mb-1"><span>ชื่อ: </span> <span class="mr-2">{{address.fname}}</span>
-            <span>{{address.lname}}</span></p>
-          <p class="ml-2 mb-1"><span>ที่อยู่: </span> <span>{{address.address}}</span></p>
+          <p class="ml-2 mb-1"><span>ชื่อ: </span> <span class="mr-2">{{address.firstname}}</span>
+            <span>{{address.lastname}}</span></p>
+          <p class="ml-2 mb-1"><span>ที่อยู่: </span> <span>{{address.address.houseno}} {{address.address.village}} {{address.address.street}}
+             ต.{{address.address.subdistrict}} อ.{{address.address.district}} จ.{{address.address.province}}
+              {{address.address.zipcode}}</span></p>
           <p class="ml-2 mb-1"><span>เบอร์โทร: </span> <span>{{address.tel}}</span></p>
         </span>
       </div>
