--- a/src/app/pages/admin-manage-team/admin-manage-team.component.html
+++ b/src/app/pages/admin-manage-team/admin-manage-team.component.html
@@ -54,10 +54,10 @@
           <span>{{itm.codeteam}}</span>
         </div>
         <div class="col-3 mt-2 mb-2  text-center">
-          <span>{{itm.name}}</span>
+          <span class="text-overflow">{{itm.name}}</span>
         </div>
         <div class="col-4 mt-2 mb-2  text-center">
-          <span>{{itm.detail}}</span>
+          <span class="text-overflow">{{itm.detail}}</span>
         </div>
         <div class="col-3 mt-2 mb-2  text-center">
           <button mat-stroked-button class="mr-1" disabled color="accent">ยุบทีม</button>
