--- a/src/app/pages/admin-manage-team/admin-manage-team.component.scss
+++ b/src/app/pages/admin-manage-team/admin-manage-team.component.scss
@@ -11,3 +11,9 @@
 .border-btn {
     border-color: #ff4081;
 }
+
+.text-overflow {
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
