--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -23,7 +23,7 @@
 
       <span class="d-block d-sm-block d-md-none">
         <button mat-stroked-button class="mb-1 style-btn-small" style="margin-right: 1px">เเก้ไข</button>
-        <button mat-stroked-button class="mb-1 style-btn-small">ลบ</button>
+        <button mat-stroked-button (click)="onDelete(item)" class="mb-1 style-btn-small">ลบ</button>
       </span>
     </div>
   </div>
