--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -13,8 +13,8 @@
   <div class="col-6 pl-1 pr-1">
     <div class="row">
       <div class="col-12">
-        <span class="font-address">
-          <p class="ml-2 mb-1"><span>ชื่อ: </span> <span class="mr-2">{{address.firstname}}</span>
+        <span class="font-address" *ngIf="address">
+          <p class="ml-2 mb-1" *ngIf="address && address.firstname"><span>ชื่อ: </span> <span class="mr-2">{{address.firstname}}</span>
             <span>{{address.lastname}}</span></p>
           <p class="ml-2 mb-1"><span>ที่อยู่: </span> <span>{{address.address.houseno}} {{address.address.village}}
               {{address.address.street}}
