--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -22,7 +22,7 @@
       </span>
 
       <span class="d-block d-sm-block d-md-none">
-        <button mat-stroked-button (click)='onClickEdit(item)' class="mb-1 style-btn-small"
+        <button mat-stroked-button (click)='onClickEdit(item)' class="mb-1 mr-2 style-btn-small"
           style="margin-right: 1px">เเก้ไข</button>
         <button mat-stroked-button (click)="onDelete(item)" class="mb-1 style-btn-small">ลบ</button>
       </span>
