--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -93,7 +93,7 @@
     </div>
 
 
-    <div class="row">
+    <div class="row mb-3">
       <div class="col-6">
         <button mat-stroked-button color="accent" class="btn-style">ยกเลิก</button>
       </div>
