--- a/src/app/pages/order-list/order-list.component.scss
+++ b/src/app/pages/order-list/order-list.component.scss
@@ -45,8 +45,10 @@
 }
 
 .positon-button {
-    bottom: 20px;
-    position: absolute;
-    margin-right: 15px;
-    right: -15px;
+    
+}
+
+.div-content{
+    height: 70vh;
+    overflow-y: auto;
 }
