--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -18,14 +18,17 @@
           <span>บาท</span></p>
 
         <span class="d-none d-sm-none d-md-block">
-          <button mat-stroked-button (click)='onClickEdit(item)' class="mb-1 mr-2 style-btn">เเก้ไข</button>
-          <button mat-stroked-button (click)="onDelete(item)" class="mb-1 style-btn">ลบ</button>
+          <button mat-stroked-button color="accent" (click)='onClickEdit(item)'
+            class="mb-1 mr-2 style-btn btn-border-style">เเก้ไข</button>
+          <button mat-stroked-button color="accent" (click)="onDelete(item)"
+            class="mb-1 style-btn btn-border-style">ลบ</button>
         </span>
 
         <span class="d-block d-sm-block d-md-none">
-          <button mat-stroked-button (click)='onClickEdit(item)' class="mb-1 mr-2 style-btn-small"
-            style="margin-right: 1px">เเก้ไข</button>
-          <button mat-stroked-button (click)="onDelete(item)" class="mb-1 style-btn-small">ลบ</button>
+          <button mat-stroked-button color="accent" (click)='onClickEdit(item)'
+            class="mb-1 mr-2 style-btn-small btn-border-style" style="margin-right: 1px">เเก้ไข</button>
+          <button mat-stroked-button color="accent" (click)="onDelete(item)"
+            class="mb-1 style-btn-small btn-border-style">ลบ</button>
         </span>
       </div>
     </div>
@@ -51,23 +54,26 @@
           <span>บาท</span></p>
 
         <span class="d-none d-sm-none d-md-block">
-          <button mat-stroked-button (click)='onClickEdit(item)' class="mb-1 mr-2 style-btn">เเก้ไข</button>
-          <button mat-stroked-button (click)="onDelete(item)" class="mb-1 style-btn">ลบ</button>
+          <button mat-stroked-button color="accent" (click)='onClickEdit(item)'
+            class="mb-1 mr-2 style-btn btn-border-style">เเก้ไข</button>
+          <button mat-stroked-button color="accent" (click)="onDelete(item)"
+            class="mb-1 style-btn btn-border-style">ลบ</button>
         </span>
 
         <span class="d-block d-sm-block d-md-none">
-          <button mat-stroked-button (click)='onClickEdit(item)' class="mb-1 mr-2 style-btn-small"
-            style="margin-right: 1px">เเก้ไข</button>
-          <button mat-stroked-button (click)="onDelete(item)" class="mb-1 style-btn-small">ลบ</button>
+          <button mat-stroked-button color="accent" (click)='onClickEdit(item)'
+            class="mb-1 mr-2 style-btn-small btn-border-style" style="margin-right: 1px">เเก้ไข</button>
+          <button mat-stroked-button color="accent" (click)="onDelete(item)"
+            class="mb-1 style-btn-small btn-border-style">ลบ</button>
         </span>
       </div>
     </div>
   </div>
 </div>
 
-<div class="row">
+<div class="row mt-4">
   <div class="col-12">
-    <button class="style-btn-width" mat-stroked-button (click)='sendOrder()'
+    <button class="style-btn-width btn-border-style" color="accent" mat-stroked-button (click)='sendOrder()'
       style="margin-right: 1px">ส่งใบสั่งซื้อ</button>
   </div>
 </div>
