edit ui list order

--- a/src/app/pages/order-list/order-list.component.scss
+++ b/src/app/pages/order-list/order-list.component.scss
@@ -11,6 +11,7 @@
 
 .border-list {
     border: solid 1px #e2e2e2;
+    border-radius: 2%;
 }
 
 .list-style {
@@ -52,4 +53,8 @@
 
 .btn-border-style {
     border-color: #ff4081;
+}
+
+.bg-white{
+    background-color: white;
 }
