--- a/src/app/pages/order-list/order-list.component.html
+++ b/src/app/pages/order-list/order-list.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="col-6 col-sm-6 col-md-3 mt-3 list-style" style="width: 100%" *ngFor="let item of dataOrderMember">
-      <div class="col-12 border-list text-center pr-0 pl-0">
+      <div class="col-12 border-list text-center pr-0 pl-0 bg-white">
         <p class="mb-1 text-overflow"><span>ออเดอร์: </span> <span>{{item.orderno}}</span></p>
         <p class="mb-1 text-overflow"><span>ชื่อ: </span> <span class="mr-1">{{item.customer.firstname}}</span>
           <span>{{item.customer.lastname}}</span></p>
@@ -18,17 +18,14 @@
           <span>บาท</span></p>
 
         <span class="d-none d-sm-none d-md-block">
-          <button mat-stroked-button color="accent" (click)='onClickEdit(item)'
-            class="mb-1 mr-2 style-btn btn-border-style">เเก้ไข</button>
-          <button mat-stroked-button color="accent" (click)="onDelete(item)"
-            class="mb-1 style-btn btn-border-style">ลบ</button>
+          <button mat-stroked-button color="accent" (click)='onClickEdit(item)' class="mb-1 mr-2 style-btn">เเก้ไข</button>
+          <button mat-stroked-button color="accent" (click)="onDelete(item)" class="mb-1 style-btn">ลบ</button>
         </span>
 
         <span class="d-block d-sm-block d-md-none">
-          <button mat-stroked-button color="accent" (click)='onClickEdit(item)'
-            class="mb-1 mr-2 style-btn-small btn-border-style" style="margin-right: 1px">เเก้ไข</button>
-          <button mat-stroked-button color="accent" (click)="onDelete(item)"
-            class="mb-1 style-btn-small btn-border-style">ลบ</button>
+          <button mat-stroked-button color="accent" (click)='onClickEdit(item)' class="mb-1 mr-2 style-btn-small"
+            style="margin-right: 1px">เเก้ไข</button>
+          <button mat-stroked-button color="accent" (click)="onDelete(item)" class="mb-1 style-btn-small">ลบ</button>
         </span>
       </div>
     </div>
@@ -45,7 +42,7 @@
     </div>
 
     <div class="col-6 col-sm-6 col-md-3 mt-3 list-style" style="width: 100%" *ngFor="let item of dataOrderOwner">
-      <div class="col-12 border-list text-center pr-0 pl-0">
+      <div class="col-12 border-list text-center pr-0 pl-0 bg-white">
         <p class="mb-1 text-overflow"><span>ออเดอร์: </span> <span>{{item.orderno}}</span></p>
         <p class="mb-1 text-overflow"><span>ชื่อ: </span> <span class="mr-1">{{item.customer.firstname}}</span>
           <span>{{item.customer.lastname}}</span></p>
@@ -54,17 +51,14 @@
           <span>บาท</span></p>
 
         <span class="d-none d-sm-none d-md-block">
-          <button mat-stroked-button color="accent" (click)='onClickEdit(item)'
-            class="mb-1 mr-2 style-btn btn-border-style">เเก้ไข</button>
-          <button mat-stroked-button color="accent" (click)="onDelete(item)"
-            class="mb-1 style-btn btn-border-style">ลบ</button>
+          <button mat-stroked-button color="accent" (click)='onClickEdit(item)' class="mb-1 mr-2 style-btn">เเก้ไข</button>
+          <button mat-stroked-button color="accent" (click)="onDelete(item)" class="mb-1 style-btn">ลบ</button>
         </span>
 
         <span class="d-block d-sm-block d-md-none">
-          <button mat-stroked-button color="accent" (click)='onClickEdit(item)'
-            class="mb-1 mr-2 style-btn-small btn-border-style" style="margin-right: 1px">เเก้ไข</button>
-          <button mat-stroked-button color="accent" (click)="onDelete(item)"
-            class="mb-1 style-btn-small btn-border-style">ลบ</button>
+          <button mat-stroked-button color="accent" (click)='onClickEdit(item)' class="mb-1 mr-2 style-btn-small"
+            style="margin-right: 1px">เเก้ไข</button>
+          <button mat-stroked-button color="accent" (click)="onDelete(item)" class="mb-1 style-btn-small">ลบ</button>
         </span>
       </div>
     </div>
