--- a/src/app/pages/order/order.component.scss
+++ b/src/app/pages/order/order.component.scss
@@ -54,3 +54,7 @@ mat-sidenav-content .container {
     overflow: hidden !important;
     text-overflow: ellipsis !important;
 }
+
+.cursor-pointer {
+    cursor: pointer !important;
+}
