--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -12,6 +12,11 @@
 
   <div class="col-6 pl-1 pr-1">
     <div class="row">
+      <div class="col-12 text-right" >
+        <i class="material-icons cursor-pointer" style="font-size: 20px" (click)="onEditAddress()">
+          edit
+        </i>
+      </div>
       <div class="col-12">
         <span class="font-address" *ngIf="address">
           <p class="ml-2 mb-1" *ngIf="address && address.firstname">
@@ -33,7 +38,7 @@
             <p class="ml-4 mb-1"> <span>{{item.name}}</span></p>
           </div>
           <div class="col-6 text-right">
-            <i class="material-icons" (click)="deleteProd(item , i)">
+            <i class="material-icons cursor-pointer" (click)="deleteProd(item , i)">
               delete_outline
             </i>
           </div>
@@ -76,9 +81,9 @@
       </div>
       <div class="col-12 col-md-7 text-right">
         <mat-form-field class="example-full-width">
-          <mat-select placeholder="กรุณาเลือกประเภทการชำระเงิน"  [(ngModel)]="namePayment">
+          <mat-select placeholder="กรุณาเลือกประเภทการชำระเงิน" [(ngModel)]="namePayment">
             <mat-option>None</mat-option>
-            <mat-option *ngFor="let item of paymentType" [value]="item"  (click)="selectPaymentType(item)">
+            <mat-option *ngFor="let item of paymentType" [value]="item" (click)="selectPaymentType(item)">
               {{item}}
             </mat-option>
           </mat-select>
